avatar should be now vertical aligned correctly

--- a/src/less/components/table.less
+++ b/src/less/components/table.less
@@ -37,3 +37,11 @@ table#emails td:nth-child(2) {
 table#emails td:nth-child(3), td:nth-child(4) {
   text-align: center;
 }
+
+
+// ---------------------------------------------------------------------------------------------------------------------
+// BLACKLIST
+// ---------------------------------------------------------------------------------------------------------------------
+table#blacklist td:nth-child(1) a img {
+  vertical-align: middle;
+}
