--- a/src/less/miscellaneous/images.less
+++ b/src/less/miscellaneous/images.less
@@ -19,7 +19,6 @@
   padding: 4px;
   background-color: white;
   border: 1px solid @gray-lighter;
-  border: 1px solid @gray-lighter;
   .box-shadow(0 1px 3px rgba(0, 0, 0, 0.1));
   .border-radius(2px);
 }
